Fixed table overflow

--- a/Forms.iOS/Html/accountsTable.css
+++ b/Forms.iOS/Html/accountsTable.css
@@ -1,4 +1,3 @@
-
 html, body {
     font-family: "Droid Sans Mono", "Courier New", Consolas, monospace;
     font-weight: lighter;
@@ -10,25 +9,47 @@ html, body {
     user-select: none;
 }
 
+body > div{
+  position: fixed;
+  width: 100%;
+  overflow-x: auto;
+}
+
 table {
-    position: fixed;
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 td:first-child {
     padding-left: 15px;
 }
 
-    td:first-child + td, td:first-child + td + td {
-        text-align: right;
-    }
+td:first-child  > div {
+    position: relative;
+    overflow: hidden;
+    height: 1.33em;
+}
+
+/* visible content */
+td:first-child  > div > span {
+    display: block;
+    position: absolute;
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.33em;
+}
+
+td:first-child+td, td:first-child+td+td {
+    text-align: right;
+}
 
 th:last-child, td:last-child {
     width: 30px;
 }
 
-tbody td span:last-child {
+tbody td:not(:first-child) span:last-child {
     font-size: 9pt;
 }
 
@@ -63,14 +84,14 @@ thead td {
     padding-right: 0.35em;
 }
 
-    thead td span {
-        display: block;
-        background-image: url("upDown.svg");
-        background-repeat: no-repeat;
-        background-position: right center;
-        background-size: auto 1em;
-        padding-right: 1.25em;
-    }
+thead td span {
+    display: block;
+    background-image: url("upDown.svg");
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: auto 1em;
+    padding-right: 1.25em;
+}
 
 thead .down span {
     background-image: url("up.svg");
