--- a/Forms.iOS/Html/equalsTable.css
+++ b/Forms.iOS/Html/equalsTable.css
@@ -12,11 +12,16 @@ html, body {
     background-color: rgb(238, 239, 243);
 }
 
+body > div{
+  position: fixed;
+  width: 100%;
+  overflow-x: auto;
+}
+
 table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: white;
-    position: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  background-color: white;
 }
 
 td:first-child {
