--- a/Forms.iOS/Html/ratesTable.css
+++ b/Forms.iOS/Html/ratesTable.css
@@ -11,10 +11,15 @@ html, body {
     user-select: none;
 }
 
+body > div{
+  position: fixed;
+  width: 100%;
+  overflow-x: auto;
+}
+
 table {
-    position: fixed;
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 td:first-child {
